# vtk-study

./: CMakeLists.txt  README.md  _clang-format
data/PLY/CSD/CS3600_Model_Implant_Titanic/: MandibularAnatomy.ply  MandibularImplant.ply
data/PLY/CSD/CS9000_Model_Plaster/: MandibularAnatomy.ply
data/PLY/Stanford/: README.txt
data/PLY/Stanford/drill/reconstruction/: README~
doc/: 06. VTK 基本数据结构.md
src/: .vimrc  CMakeLists.txt  arrays.cpp  cone1.cpp  cone2.cpp  cone3.cpp  cone4.cpp  cone5.cpp  cone6.cpp  cylinder.cpp  cylinder_light.cpp  cylinder_texture.cpp  debug_warning.cpp  ds01_triangle_points.cpp  ds02_triangle_vertices.cpp  ds03_triangle_lines.cpp  ds04_scalars.cpp  hello.cpp  observer_command.cpp  ply_reader.cpp  reference_count.cpp  rtti.cpp  smart_pointer.cpp  stl_ply_reader.cpp  xml_poly_data_read.cpp  xml_poly_data_write.cpp  xml_reader.cpp  xml_writer.cpp
src/Arrays/: Arrays.cxx  CMakeLists.txt
src/Cone/: CMakeLists.txt  Cone1.cxx  Cone2.cxx  Cone3.cxx  Cone4.cxx  Cone5.cxx  Cone6.cxx
src/Rendering/: CADPart.cxx  CMakeLists.txt  Cylinder.cxx  FilterCADPart.cxx
src/Win32Cone/: CMakeLists.txt  Win32Cone.cxx
src/XMLPolyData/: CMakeLists.txt  XMLPolyData_Read.cxx  XMLPolyData_Write.cxx  test.vtk
src/qt/: CMakeLists.txt
src/qt/cylinder/: CMakeLists.txt  main.cpp  my_widget.cpp  my_widget.h  my_window.cpp
src/qt/image_viewer/: CMakeLists.txt  main.cpp
src/qt/image_viewer2/: CMakeLists.txt  main.cpp  my_window.cpp  my_window.h
src/qt/image_viewer_2/: CMakeLists.txt  main.cpp  my_window.cpp  my_window.h
src/qt/ogl_vtk_mixed/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h  ogl_widget.cpp  ogl_widget.h  vtk_widget.cpp  vtk_widget.h
src/qvtk_cylinder/: CMakeLists.txt  my_widget.h  my_window.h
src/wx/: CMakeLists.txt
src/wx/cylinder/: CMakeLists.txt  app.cpp  my_frame.cpp  my_frame.h  my_panel.cpp  my_panel.h
